# openpyxl-stubs

./: .pre-commit-config.yaml  Makefile  README.md  requirements-dev.in  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
openpyxl-stubs/: __init__.pyi
openpyxl-stubs/cell/: __init__.pyi  cell.pyi
openpyxl-stubs/chart/: axis.pyi
openpyxl-stubs/reader/: excel.pyi
openpyxl-stubs/styles/: __init__.pyi  borders.pyi  colors.pyi  fills.pyi
openpyxl-stubs/utils/: __init__.pyi  cell.pyi
openpyxl-stubs/workbook/: __init__.pyi  defined_name.pyi  workbook.pyi
openpyxl-stubs/worksheet/: worksheet.pyi
openpyxl-stubs/xml/: __init__.pyi
requirements/: ci.txt  dev.txt
