[metadata]
name = openpyxl-stubs

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

version = 0.1.6

description = Type stubs for openpyxl
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility,mypy,stubs

license = MIT license

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English

[isort]
import_heading_stdlib=Core Library modules
import_heading_thirdparty=Third party modules
import_heading_firstparty=First party modules
import_heading_localfolder=Local modules
include_trailing_comma=True
indent='    '
known_third_party =setuptools
length_sort=0
line_length=80
multi_line_output=3

[mypy]
ignore_missing_imports = True
